Fixes some dev code which was still visible

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -47,11 +47,11 @@ html, body, #app {
     font-size: 25px;
 }
 
-.navbar a {
+a {
     color: #65A10A
 }
 
-a, a:hover, a:focus {
+a:hover, a:focus {
     text-decoration: inherit;
     color: inherit;
 }
